# image-processing-cli-API

./: CMakeLists.txt  README.md  cl_interface.cpp  cl_interface.h  find_region.cpp  find_region.h  image.cpp  image.h  image_process.cpp  image_process.h  main.cpp  pixel.cpp  pixel.h  region.cpp  region.h
ip_api/: CMakeLists.txt
src/: cl_interface.cpp  cl_interface.h  image.cpp  image.h  image_process.cpp  image_process.h  main.cpp  pixel.cpp  pixel.h  region.cpp  region.h
